--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 :root {
     --border: rgb(212, 212, 235);
     --hover: rgb(240, 240, 243);
+    --font-size: 1.25rem;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
     margin-top: 2rem;
     margin-bottom: 2rem;
     font-family: "Asap Condensed", sans-serif;
-    font-size: 1.5rem;
+    font-size: var(--font-size);
 }
 
 body > * {
@@ -28,7 +29,7 @@ button {
     justify-content: center;
     padding-left: 1rem;
     padding-right: 1rem;
-    font-size: 1.5rem;
+    font-size: var(--font-size);
 }
 
 button:not(:first-child) {
@@ -56,7 +57,7 @@ input {
     height: 2rem;
     border-radius: 1rem;
     padding: 1rem;
-    font-size: 1.5rem;
+    font-size: var(--font-size);
     box-sizing: border-box;
     border: 1px solid var(--border);
 }
