--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,8 @@ body > * {
     max-width: 100%;
 }
 
-button,.button {
+button,
+.button {
     background-color: transparent;
     border: 1px solid var(--border);
     border-radius: 1rem;
@@ -31,10 +32,13 @@ button,.button {
     justify-content: center;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     font-size: var(--font-size);
 }
 
-button,.button:not(:first-child) {
+button:not(:first-child),
+.button:not(:first-child) {
     margin-left: 1rem;
 }
 
@@ -45,7 +49,8 @@ button,.button:not(:first-child) {
     padding: 0;
 }
 
-button,.button:hover {
+button:hover,
+.button:hover {
     background-color: var(--hover);
 }
 
