--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,8 @@
     --border: rgb(212, 212, 235);
     --hover: rgb(240, 240, 243);
     --font-size: 1.25rem;
+    --late: #ff6600;
+    --on-time: #009933;
 }
 
 body {
