--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@
     --border: rgb(212, 212, 235);
     --hover: rgb(240, 240, 243);
     --font-size: 1.25rem;
+    --font-size-small: 1rem;
     --late: #ff6600;
     --on-time: #009933;
 }
@@ -28,7 +29,6 @@ button,
     cursor: pointer;
     color: black;
     text-decoration: none;
-    height: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,6 +48,7 @@ button:not(:first-child),
     border: none;
     border-radius: 50%;
     width: 2rem;
+    height: 2rem;
     padding: 0;
 }
 
@@ -63,9 +64,10 @@ label {
 
 input {
     width: 100%;
-    height: 2rem;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
     font-size: var(--font-size);
     box-sizing: border-box;
     border: 1px solid var(--border);
